# onyx-otc

./: .gitignore  LICENSE  Makefile  mkdocs.yml  pyproject.toml  readme.md  test.py
.dev/: install-buf  lint  test
.github/workflows/: build.yml
docs/: index.md  reference_v1.md  reference_v2.md
examples/: wsv2.py
onyx_otc/: __init__.py  models.py  responses.py  timestamp.py  websocket.py  websocket_v2.py  websocket_v2_json.py
onyx_otc/cli/: stream.py
otc/v1/: common_pb2.py  requests_pb2.py  responses_pb2.py  types_pb2.py
protos/onyx_exchange/protobuf/: common.proto  requests.proto  responses.proto  types.proto
protos/onyx_exchange/v1/: common.proto  requests.proto  responses.proto  types.proto
protos/onyx_otc/v1/: common.proto  requests.proto  responses.proto  types.proto
protos/onyx_otc/v2/: common.proto  requests.proto  responses.proto  types.proto
protos/otc/v1/: common.proto  requests.proto  responses.proto  types.proto
tests/: conftest.py  test_protos.py  test_websocket.py  test_websocket_v2.py  utils.py
tests/v1/: conftest.py  test_websocket_v1.py  utils.py
tests/v2/: conftest.py  test_protos.py  test_websocket_v2.py  utils.py
