[tool.poetry]
name = "onyx-exchange"
version = "0.1.0"
description = "Onyx exchange python client and documentation"
authors = ["lsbardel <lsbardella@onyxcapitaltechnology.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
protobuf = "^5.27.2"
grpcio = "^1.64.1"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.64.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
